[package]
name = "bean_to_cup"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.28.1"
rfd = "0.14.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

